# pochivision

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.en.md  README.ja.md  README.md  analytics.bat  app.py  capture.py  config.json  extractor_config.json  image_aggregator.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  solution.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  (+3 more)
capture_runner/: __init__.py  viewer.py
capturelib/: __init__.py  camera_setup.py  capture_manager.py  config_handler.py  config_schema.py  log_manager.py
changelogs/: 0.1.x.md  0.2.x.md  0.3.x.md  0.4.x.md  0.5.x.md  0.6.x.md  README.md
config/: config.json  detect_config.json  infer_config.json
core/: __init__.py  pipeline_executor.py
docs/: fft_features.md  glcm_features.md  hlac_features.md  index.md  lbp_features.md  swt_features.md
exceptions/: __init__.py  base.py  config.py  processor.py
feature_extractors/: __init__.py  base.py  brightness_statistics.py  circle_counter.py  fft_frequency.py  glcm_texture.py  hlac_texture.py  hsv_statistics.py  lbp_texture.py  rgb_statistics.py  schema.py  swt_frequency.py
pochivision/: __init__.py  constants.py  workspace.py
processors/: __init__.py  base.py  binarization.py  blur.py  clahe.py  contour.py  edge_detection.py  equalize.py  grayscale.py  mask_composition.py  registry.py  resize.py
tests/: __init__.py  conftest.py  test_binarization_processor.py  test_blur_processors.py  test_capture_engine.py  test_clahe_processor.py  test_contour_processor.py  test_edge_detection_processor.py  test_equalize_processor.py  test_exceptions.py  test_exceptions_inference.py  test_features.py  test_glcm_texture_extractor.py  test_grayscale_processor.py  test_resize_processor.py  test_swt_frequency.py  test_workspace.py
tools/: README_create_test_images.md  README_feature_extraction.md  README_feature_selector_cli.md  README_fft_visualizer.md  README_histogram_generator.md  README_image_aggregator.md  README_profile_processor.md  README_scatter_plot_generator.md  __init__.py  cameratest.py  feature_extraction.py  feature_selector_cli.py  fft_sample.ipynb  fft_visualizer.py  histogram_generator.py  image_aggregator.py  profile_processor.py  scatter_plot_generator.py
utils/: __init__.py  file_naming.py  image.py
(+286 files in other folders)
